--- a/SplunkForNCircle/default/app.conf
+++ b/SplunkForNCircle/default/app.conf
@@ -1,8 +1,17 @@
 # Splunk app configuration file
 
-[install]
-state = enabled
-
 [ui]
 is_visible = true
 label = Splunk For nCircle
+
+[launcher]
+author = vladimir.had@gmail.com
+description = Splunk For nCircle provides operational intelligence around vulnerable data from nCircle IP360
+version=1.0.0
+
+[package]
+id = SplunkForNCircle
+
+[install]
+state = enabled
+build = 100
