--- a/SplunkForNCircle/default/ncircle.conf
+++ b/SplunkForNCircle/default/ncircle.conf
@@ -1,12 +1,4 @@
-# [<unique reference used for logging of app messages>]
-# protocol=(http|https)
-# server=<ip/hostname of device>
-# port=<device port>
-# type=(appliance|broker|concentrator|decoder)
-# username=<username>
-# password=<password>
-
-[vne-us]
-host=192.168.1.13
-username=admin
-password=netwitness
+[vne-appliance]
+host=10.20.30.40
+username=ip360@ncircle.com
+password=password
