Splunk For nCircle - 1.0.1
- adding new views: active scans, scan profile details and calendar view for scans

--- a/SplunkForNCircle/default/app.conf
+++ b/SplunkForNCircle/default/app.conf
@@ -5,13 +5,13 @@ is_visible = true
 label = Splunk For nCircle
 
 [launcher]
-author = vladimir.had@gmail.com
+author = havran.init0@gmail.com
 description = Splunk For nCircle provides operational intelligence around vulnerable data from nCircle IP360
-version=1.0.0
+version=1.0.1
 
 [package]
 id = SplunkForNCircle
 
 [install]
 state = enabled
-build = 100
+build = 101
