--- a/SplunkForNCircle/default/inputs.conf
+++ b/SplunkForNCircle/default/inputs.conf
@@ -7,3 +7,13 @@
 #interval = 3600 
 #sourcetype = _json
 #index = vuln_emea
+
+#[script://$SPLUNK_HOME/etc/apps/SplunkForNCircle/bin/getActiveScans.py]
+#interval = 3600 
+#sourcetype = _json
+#index = vuln_emea
+
+#[script://$SPLUNK_HOME/etc/apps/SplunkForNCircle/bin/getDpStats.py]
+#interval = 86400
+#sourcetype = _json
+#index = vuln_emea
